add detox prompt

--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -102,7 +102,7 @@
     "eslint-config-prettier": "REPLACE_WITH_VERSION",
     "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
     "expect": "REPLACE_WITH_VERSION",
-    "generator-jhipster-react-native": "<%= packageVersion %>",
+    "generator-jhipster-react-native": "<%= blueprintPackageVersion %>",
     "jest": "REPLACE_WITH_VERSION",
     "jest-expo": "EXPO_REPLACE_WITH_VERSION",
     <%_ if (!skipCommitHook) { _%>
