--- a/generators/react-native/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/react-native/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -63,7 +63,7 @@ const links = [
     link: 'https://github.com/jhipster/generator-jhipster-react-native/blob/main/docs/storybook.md',
     description: 'How to use Storybook with React Native.',
   },
-  <%_ if (websocket) { _%>
+  <%_ if (websocket !== 'no') { _%>
   {
     id: 8,
     title: 'Websockets Demo',
