--- a/generators/react-native/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/react-native/templates/app/modules/login/login.sagas.js.ejs
@@ -5,7 +5,7 @@ import AppConfig from '../../config/app-config'
 <%_ } _%>
 import LoginActions from './login.reducer'
 import AccountActions from '../../shared/reducers/account.reducer'
-<%_ if (websocket) { _%>
+<%_ if (websocket !== 'no') { _%>
 import WebsocketService from '../../shared/websockets/websocket.service'
 <%_ } _%>
 <%_ if (authenticationType === 'oauth2') { _%>
@@ -63,7 +63,7 @@ export function * login (api, { username, password }) {
     yield call(api.setAuthToken, response.data.id_token)
     yield put(LoginActions.loginSuccess(response.data.id_token))
     yield put(AccountActions.accountRequest())
-    <%_ if (websocket) { _%>
+    <%_ if (websocket !== 'no') { _%>
     WebsocketService.setToken(response.data.id_token)
     <%_ } _%>
     yield put({ type: 'RELOGIN_OK' })
@@ -99,7 +99,7 @@ export function * loginLoad (api) {
   // only set the token if we have it
   if (authToken) {
     yield call(api.setAuthToken, authToken)
-    <%_ if (websocket) { _%>
+    <%_ if (websocket !== 'no') { _%>
     WebsocketService.setToken(authToken)
     <%_ } _%>
   }
