--- a/generators/react-native/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/react-native/templates/app/shared/reducers/create-store.js.ejs
@@ -5,7 +5,7 @@ import { composeWithDevTools } from 'redux-devtools-extension';
 import AppConfig from '../../config/app-config';
 import RehydrationServices from '../services/rehydration.service'
 import ReduxPersist from '../../config/redux-persist'
-<%_ if (websocket) { _%>
+<%_ if (websocket !== 'no') { _%>
 import WebsocketService from '../websockets/websocket.service'
 <%_ } _%>
 const compose = AppConfig.debugMode ? composeWithDevTools : composeWithoutDevTools;
@@ -21,7 +21,7 @@ export default (rootReducer, rootSaga) => {
   const sagaMonitor = null;
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
-  <%_ if (websocket) { _%>
+  <%_ if (websocket !== 'no') { _%>
   const wsSagaMiddleware = createSagaMiddleware(WebsocketService.websocketSagas)
   middleware.push(wsSagaMiddleware)
   <%_ } _%>
@@ -39,14 +39,14 @@ export default (rootReducer, rootSaga) => {
 
   // kick off root saga
   let sagasManager = sagaMiddleware.run(rootSaga)
-  <%_ if (websocket) { _%>
+  <%_ if (websocket !== 'no') { _%>
   let websocketSagaManager = wsSagaMiddleware.run(WebsocketService.websocketSagas)
   <%_ } _%>
 
   return {
     store,
     sagasManager,
-    <%_ if (websocket) { _%>
+    <%_ if (websocket !== 'no') { _%>
     websocketSagaManager,
     <%_ } _%>
     sagaMiddleware
