--- a/generators/react-native/templates/app/shared/reducers/index.js.ejs
+++ b/generators/react-native/templates/app/shared/reducers/index.js.ejs
@@ -10,7 +10,7 @@ export const reducers = combineReducers({
   appState: require('./app-state.reducer').reducer,
   users: require('./user.reducer').reducer,
   // jhipster-react-native-redux-store-import-needle
-  <%_ if (websocket) { _%>
+  <%_ if (websocket !== 'no') { _%>
   chat: require('../../modules/chat/chat.reducer').reducer,
   <%_ } _%>
   <%_ if (authenticationType === 'oauth2') { _%>
