change error detection to reliable in e2e

--- a/generators/react-native/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -50,8 +50,16 @@ function ChangePasswordScreen(props) {
 
   return (
     <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="changePasswordScreen" keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
-      {!!error && <Text style={styles.errorText}>{error}</Text>}
-      {!!success && <Text style={styles.successText}>{success}</Text>}
+      {!!error && (
+        <Text testID="changePasswordErrorMessage" style={styles.errorText}>
+          {error}
+        </Text>
+      )}
+      {!!success && (
+        <Text testID="changePasswordSuccessMessage" style={styles.successText}>
+          {success}
+        </Text>
+      )}
       <Form
         initialValues={{ currentPassword: '', confirmPassword: '', newPassword: '' }}
         validationSchema={validationSchema}
