--- a/generators/react-native/templates/app/modules/login/login-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/login/login-screen.js.ejs
@@ -48,7 +48,11 @@ function LoginScreen(props) {
 
   return (
     <KeyboardAwareScrollView contentContainerStyle={styles.container} testID="loginScreen" keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
-      {!!error && <Text style={styles.errorText}>{error}</Text>}
+      {!!error && (
+        <Text testID="loginErrorMessage" style={styles.errorText}>
+          {error}
+        </Text>
+      )}
       <Form initialValues={{ login: '', password: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
         <FormField
           name="login"
