--- a/generators/react-native/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/react-native/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -35,19 +35,17 @@ describe('Change Password Screen Tests', () => {
   };
 
   it('should display a success message on change password success', async () => {
-    const expectedLabel = 'Password changed';
     await changePassword(password, updatedPassword);
-    await waitForElementToBeVisibleByLabel(expectedLabel);
-    await expect(element(by.label(expectedLabel))).toBeVisible();
+    await waitForElementToBeVisibleById('changePasswordSuccessMessage');
+    await expect(element(by.id('changePasswordSuccessMessage'))).toBeVisible();
     await changePassword(updatedPassword, password);
-    await waitForElementToBeVisibleByLabel(expectedLabel);
-    await expect(element(by.label(expectedLabel))).toBeVisible();
+    await waitForElementToBeVisibleById('changePasswordSuccessMessage');
+    await expect(element(by.id('changePasswordSuccessMessage'))).toBeVisible();
   });
 
   it('should display an error message on change password failure', async () => {
-    const expectedLabel = 'Incorrect password';
     await changePassword('invalid-password', 'invalid-password');
-    await waitForElementToBeVisibleByLabel(expectedLabel);
-    await expect(element(by.label(expectedLabel))).toBeVisible();
+    await waitForElementToBeVisibleById('changePasswordErrorMessage');
+    await expect(element(by.id('changePasswordErrorMessage'))).toBeVisible();
   });
 });
